XWIKI-23355: Use query limits
* Increase the existing query limit in the security configuration.
* Use the query limit in all REST services that concern several pages or
  the page history (so only results from a single document are still
  unlimited).
* Add lots of tests for the REST query endpoints.
* Enforce the limit in the Solr search and search suggestions,
  LiveTable results and document trees.
* Add unit tests for LiveTable results.
* Add integration tests for Solr search, search suggestions and document
  trees.
* Use the query limit in all templates that use the query script service
  with a non-constant limit.
* Replace QueryConfiguration by SecurityConfiguration.
* Add Velocity macros to help validating query limits.
* Use the new Velocity macros to simplify query limit validation.
* Adapt tests.

(cherry picked from commit e3c47745195fb445b054537be86f5c01ee69558b)